--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-@import "./theme.module.scss";
+@import './theme.module.scss';
 
 * {
   padding: 0%;
@@ -14,6 +14,7 @@ html {
 body {
   font-family: $font-type-text;
   line-height: $font-lineHeight-1;
-  font-weight: $font-weight-400;
+  font-weight: $fw-400;
   color: $cl-text;
+  font-size: $spacing-16;
 }
