--- a/src/components/UI/Grid/Grid.module.scss
+++ b/src/components/UI/Grid/Grid.module.scss
@@ -1,14 +1,14 @@
 @import '../../../styles/theme.module.scss';
 
+$columns: 9;
+
 .grid {
   display: grid;
-  gap: $spacing-96;
-}
+  gap: $spacing-48;
 
-.columns-2 {
-  grid-template-columns: repeat(2, 1fr) !important;
-}
-
-.columns-3 {
-  grid-template-columns: repeat(3, 1fr);
+  @for $i from 1 through $columns {
+    &.columns-#{$i} {
+      grid-template-columns: repeat(#{$i}, 1fr);
+    }
+  }
 }
