--- a/src/components/UI/Hero/Hero.module.scss
+++ b/src/components/UI/Hero/Hero.module.scss
@@ -1,21 +1,12 @@
 @import '../../../styles/theme.module.scss';
 
 .hero {
-  // background-color: $cl-primary-light-2;
   padding: $spacing-48 0 $spacing-96 0;
 }
 
 .grid-box {
-  max-width: $screen-xl;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   align-items: center;
-  gap: $spacing-48;
-
-  padding: 0 $spacing-16;
-
-  // background-color: $cl-primary-light-2;
+  max-width: $screen-main-hero;
 }
 
 .headline-box {
@@ -27,8 +18,6 @@
   letter-spacing: -8px;
   user-select: none;
   max-width: 683px;
-  // word-break: break-all;
-  // background-color: $cl-primary-light-2;
 }
 
 .hero-buy-button {
