feat: adding HeroSteps component

--- a/src/components/UI/Container/Container.module.scss
+++ b/src/components/UI/Container/Container.module.scss
@@ -1,6 +1,8 @@
 @import '../../../styles/theme.module.scss';
 
 .container {
+  background-color: inherit;
+
   padding: 0 $spacing-24;
   margin: 0 auto;
 
