--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -7,6 +7,7 @@ $cl-primary-light-2: #d58a84;
 
 $cl-background: #f6f5f6;
 $cl-text: #0a0a0a;
+$cl-text-primary: #37120f;
 $cl-small-text: #232323;
 $cl-secundary: #00007b;
 
@@ -40,7 +41,9 @@ $br-1: 23px;
 // Font weights
 $fw-400: 400;
 $fw-500: 500;
+$fw-600: 600;
 $fw-800: 800;
+$fw-900: 900;
 
 // Font sizes
 $font-size-10: 1rem;
@@ -64,6 +67,10 @@ $font-lineHeight-1: 1;
 $font-lineHeight-2: 1.05;
 $font-lineHeight-3: 1.1;
 $font-lineHeight-4: 1.2;
+
+$f-ls-002: -2px;
+$f-ls-008: -8px;
+$f-ls-75: 0.75px;
 
 // Font families
 $font-type-text: 'Courier Prime', monospace;
