--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -18,3 +18,15 @@ body {
   color: $cl-text;
   font-size: $spacing-16;
 }
+
+.teste {
+  background-color: red;
+  height: 100px;
+  width: 100px;
+}
+
+.teste2 {
+  background-color: blue;
+  height: 100px;
+  width: 100px;
+}
