--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -4,6 +4,8 @@ $cl-primary-dark-1: #943028;
 $cl-primary-dark-2: #6f241e;
 $cl-primary-light-1: #c05047;
 $cl-primary-light-2: #d58a84;
+$cl-primary-light-3: #e3b1ad;
+$cl-primary-light-4: #f1d8d6;
 
 $cl-background: #f6f5f6;
 $cl-text: #0a0a0a;
@@ -70,7 +72,9 @@ $font-lineHeight-4: 1.2;
 
 $f-ls-002: -2px;
 $f-ls-008: -8px;
+$f-ls-02: -0.2px;
 $f-ls-75: 0.75px;
+$f-ls-120: 1.2px;
 
 // Font families
 $font-type-text: 'Courier Prime', monospace;
