feat: visual changes

--- a/src/components/UI/StepsHero/StepsHero.module.scss
+++ b/src/components/UI/StepsHero/StepsHero.module.scss
@@ -59,5 +59,6 @@
 .desctiption {
   margin-top: 20px;
   font-size: $font-size-18;
-  line-height: $f-ls-02;
+  line-height: $font-lineHeight-4;
+  color: $cl-small-text;
 }
