--- a/src/components/product/CardProduct/CardProduct.module.scss
+++ b/src/components/product/CardProduct/CardProduct.module.scss
@@ -1,8 +1,10 @@
 @import '../../../styles/theme.module.scss';
 
-.product-container {
-  width: 250px;
-  max-width: 250px;
-  height: 250px;
-  max-height: 250px;
+.card-product-box {
+  width: 100%;
+  height: 100%;
+}
+
+.product-title {
+  font-size: $font-size-20;
 }
