--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -9,8 +9,9 @@ $cl-primary-light-4: #f1d8d6;
 
 $cl-background: #f6f5f6;
 $cl-text: #0a0a0a;
-$cl-text-primary: #37120f;
 $cl-small-text: #232323;
+$cl-text-shadow: #6c6c6c;
+$cl-text-primary: #37120f;
 $cl-secundary: #00007b;
 
 // Screen Sizes
@@ -29,6 +30,7 @@ $spacing-4: 0.4rem;
 $spacing-8: 0.8rem;
 $spacing-12: 1.2rem;
 $spacing-16: 1.6rem;
+$spacing-20: 2rem;
 $spacing-24: 2.4rem;
 $spacing-32: 3.2rem;
 $spacing-48: 4.8rem;
