--- a/src/components/UI/Heading/Heading.module.scss
+++ b/src/components/UI/Heading/Heading.module.scss
@@ -24,6 +24,11 @@
     letter-spacing: $f-ls-02;
   }
 
+  &.heading-h4 {
+    font-size: $font-size-20;
+    letter-spacing: $f-ls-02;
+  }
+
   &.inline {
     display: inline;
   }
