--- a/src/components/UI/Separator/Separator.module.scss
+++ b/src/components/UI/Separator/Separator.module.scss
@@ -7,14 +7,14 @@
   fill: $cl-text-primary;
 
   margin: 0 $spacing-96;
-  background-color: $cl-primary-light-1;
+  // background-color: $cl-primary-light-1;
 }
 
 .separator-box {
   margin: $spacing-96 0;
   width: 100%;
   padding: $spacing-32;
-  background-color: $cl-primary-light-1;
+  // background-color: $cl-primary-light-1;
 }
 
 .separator-box-container {
