--- a/src/components/product/CardProduct/CardProduct.module.scss
+++ b/src/components/product/CardProduct/CardProduct.module.scss
@@ -1,10 +1,98 @@
 @import '../../../styles/theme.module.scss';
 
 .card-product-box {
-  width: 100%;
-  height: 100%;
+  background-color: red;
+
+  width: 300px;
+  height: 510px;
+
+  cursor: pointer;
+
+  &:hover {
+    .buy-button {
+      background-color: $cl-text;
+    }
+  }
+}
+
+.buy-button {
+  flex: 1;
+
+  color: $cl-background;
+  background-color: #cecece; //$cl-text-shadow;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: background-color 0.3s ease-in;
+
+  &:hover {
+    background-color: $cl-text;
+  }
 }
 
 .product-title {
-  font-size: $font-size-20;
+  color: $cl-text;
+}
+
+.card-box {
+  background-color: red;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.product-img-box {
+  flex: 8;
+  background-color: red;
+
+  overflow: hidden;
+}
+
+.product-text-box {
+  flex: 1;
+
+  padding: $spacing-8;
+  background-color: #fff;
+}
+
+.product-title-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-image {
+  background-color: red;
+  transition: 0.5s ease-in-out;
+
+  &:hover {
+    transform: scale(1.5);
+  }
+}
+
+.product-collection {
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.product-price {
+  display: block;
+  margin-top: $spacing-8;
+
+  font-weight: $fw-600;
+  font-size: $font-size-14;
+}
+
+.ghost-icon {
+  margin-left: $spacing-12;
+
+  background-color: inherit;
+  fill: $cl-background;
+
+  width: $spacing-20;
+  height: $spacing-20;
 }
