--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -10,7 +10,7 @@ $cl-primary-light-4: #f1d8d6;
 $cl-background: #f6f5f6;
 $cl-text: #0a0a0a;
 $cl-small-text: #232323;
-$cl-text-shadow: #6c6c6c;
+$cl-text-shadow: #cecece;
 $cl-text-primary: #37120f;
 $cl-secundary: #00007b;
 
