--- a/src/components/UI/MainHero/Hero.module.scss
+++ b/src/components/UI/MainHero/Hero.module.scss
@@ -10,7 +10,7 @@
 }
 
 .headline-text {
-  color: $cl-text;
+  color: $cl-text !important;
   font-size: $font-size-86 !important;
   font-weight: $fw-800 !important;
   line-height: $font-lineHeight-1 !important;
