--- a/src/components/product/CardProduct/CardProduct.module.scss
+++ b/src/components/product/CardProduct/CardProduct.module.scss
@@ -1,12 +1,13 @@
 @import '../../../styles/theme.module.scss';
 
 .card-product-box {
-  background-color: red;
+  // min-height: 510px;
 
-  width: 300px;
-  height: 510px;
+  border: 1px solid rgba($color: $cl-text, $alpha: 0.2);
+  box-shadow: 0 $spacing-2 $spacing-8 rgba($color: $cl-text, $alpha: 0.1);
 
-  cursor: pointer;
+  border-radius: $spacing-8;
+  overflow: hidden;
 
   &:hover {
     .buy-button {
@@ -19,13 +20,15 @@
   flex: 1;
 
   color: $cl-background;
-  background-color: #cecece; //$cl-text-shadow;
+  background-color: $cl-text-shadow;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  transition: background-color 0.3s ease-in;
+  transition: all 0.3s ease-in;
+
+  cursor: pointer;
 
   &:hover {
     background-color: $cl-text;
@@ -33,12 +36,13 @@
 }
 
 .product-title {
-  color: $cl-text;
+  color: $cl-text !important;
+  font-weight: $fw-600 !important;
+
+  cursor: pointer;
 }
 
 .card-box {
-  background-color: red;
-
   width: 100%;
   height: 100%;
 
@@ -48,7 +52,6 @@
 
 .product-img-box {
   flex: 8;
-  background-color: red;
 
   overflow: hidden;
 }
@@ -65,18 +68,33 @@
   justify-content: space-between;
 }
 
-.product-image {
-  background-color: red;
-  transition: 0.5s ease-in-out;
+.image-box {
+  width: 100%;
+  height: 100%;
 
-  &:hover {
-    transform: scale(1.5);
+  & span {
+    position: unset !important;
+  }
+
+  .product-image {
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+
+    transition: 0.5s ease-in-out;
+
+    &:hover {
+      transform: scale(1.8);
+    }
   }
 }
 
 .product-collection {
   text-decoration: underline;
   text-transform: uppercase;
+
+  cursor: pointer;
 }
 
 .product-price {
