--- a/src/components/product/CardProduct/CardProduct.module.scss
+++ b/src/components/product/CardProduct/CardProduct.module.scss
@@ -68,25 +68,11 @@
   justify-content: space-between;
 }
 
-.image-box {
-  width: 100%;
-  height: 100%;
+.card-product-image-effect {
+  transition: 0.5s ease-in-out;
 
-  & span {
-    position: unset !important;
-  }
-
-  .product-image {
-    object-fit: contain;
-    width: 100% !important;
-    position: relative !important;
-    height: unset !important;
-
-    transition: 0.5s ease-in-out;
-
-    &:hover {
-      transform: scale(1.8);
-    }
+  &:hover {
+    transform: scale(1.8);
   }
 }
 
