--- a/src/components/UI/CartSidebar/CartSidebar.module.scss
+++ b/src/components/UI/CartSidebar/CartSidebar.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/theme.module.scss';
+@import '@theme';
 
 .closed {
   width: 0 !important;
@@ -13,35 +13,59 @@
 
   z-index: 10;
 
-  background-color: $cl-text;
-  color: $cl-background;
-
   overflow-y: scroll;
 
-  transition: width 200ms ease-in;
+  transition: all 200ms ease-in;
 
-  div,
-  span {
-    background-color: $cl-text;
-    color: $cl-background;
+  &::-webkit-scrollbar {
+    width: 0.2rem;
   }
+
+  &::-webkit-scrollbar-track {
+    background: $cl-background;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: $cl-small-text;
+  }
+}
+
+.modal-background-container {
+  display: block;
+  position: fixed;
+
+  z-index: 10;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-transition: 0.5s;
+  overflow: auto;
+  transition: all 0.2s linear;
+}
+
+.withdata-container {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .content-container {
   width: 100%;
   height: 100%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .close-button {
+  height: $spacing-24;
+  width: $spacing-24;
+
   top: $spacing-12;
   left: $spacing-16;
 
   background-color: transparent;
-  color: $cl-background;
 
   position: absolute;
 
