--- a/src/pages/produtos/index.module.scss
+++ b/src/pages/produtos/index.module.scss
@@ -21,7 +21,14 @@
 
   display: flex;
   align-items: center;
-  justify-content: center;
+
+  :last-child {
+    margin-right: 0;
+  }
+
+  :first-child {
+    margin-left: 0;
+  }
 }
 
 .products-container {
