--- a/src/components/UI/Footer/Footer.module.scss
+++ b/src/components/UI/Footer/Footer.module.scss
@@ -49,13 +49,6 @@
   line-height: $font-lineHeight-4;
 }
 
-.footer-box {
-  display: flex;
-
-  flex-direction: column;
-  gap: $spacing-24;
-}
-
 .footer-heading {
   user-select: none;
 
@@ -65,6 +58,19 @@
   margin-bottom: $spacing-32;
 }
 
+.footer-box {
+  display: flex;
+
+  flex-direction: column;
+  gap: $spacing-24;
+
+  padding-top: $spacing-12;
+
+  &:first-child {
+    padding-top: 0;
+  }
+}
+
 .footer-grid {
   display: grid;
 
@@ -72,4 +78,8 @@
   row-gap: $spacing-96;
 
   grid-template-columns: 3fr 3fr 1.5fr 1.5fr;
+
+  &.footer-box {
+    padding-top: 40px;
+  }
 }
