--- a/src/components/product/CardProduct/index.module.scss
+++ b/src/components/product/CardProduct/index.module.scss
@@ -6,29 +6,17 @@
 
   overflow: hidden;
 
+  cursor: pointer;
+
   &:hover {
     .buy-button {
       background-color: $cl-text;
     }
-  }
-}
 
-.buy-button {
-  flex: 1;
-
-  color: $cl-background;
-  background-color: $cl-text-shadow;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  transition: all 0.3s ease-in;
-
-  cursor: pointer;
-
-  &:hover {
-    background-color: $cl-text;
+    .ghost-icon {
+      width: $spacing-20;
+      height: $spacing-20;
+    }
   }
 }
 
@@ -66,10 +54,10 @@
 }
 
 .card-product-image-effect {
-  transition: 0.5s ease-in-out;
+  transition: 0.3s ease-in-out;
 
   &:hover {
-    transform: scale(1.8);
+    transform: scale(1.3);
   }
 }
 
@@ -88,12 +76,29 @@
   font-size: $font-size-14;
 }
 
+.buy-button {
+  flex: 1;
+
+  color: $cl-background;
+  background-color: $cl-text;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  transition: all 0.3s ease-in;
+
+  cursor: pointer;
+}
+
 .ghost-icon {
   margin-left: $spacing-12;
 
   background-color: inherit;
   fill: $cl-background;
 
-  width: $spacing-20;
-  height: $spacing-20;
+  width: 0;
+  height: 0;
+
+  transition: 0.3s ease-in-out;
 }
