--- a/src/components/UI/Container/Container.module.scss
+++ b/src/components/UI/Container/Container.module.scss
@@ -3,7 +3,7 @@
 .container {
   background-color: inherit;
 
-  padding: 0 $spacing-24;
+  padding: 0 0;
   margin: 0 auto;
 
   max-width: $screen-xl;
