--- a/src/features/products/components/TypeNotFound/index.module.scss
+++ b/src/features/products/components/TypeNotFound/index.module.scss
@@ -1,12 +1,16 @@
 @import '@theme';
 
-.error-container {
+.container {
   height: $h-container-content;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+
+.not-fount {
+  margin: $spacing-24 0;
 }
 
 .icon {
@@ -17,8 +21,4 @@
   height: $spacing-64;
 
   background-color: transparent;
-}
-
-.not-fount {
-  margin: $spacing-24 0;
 }
