--- a/src/pages/produtos/index.module.scss
+++ b/src/pages/produtos/index.module.scss
@@ -1,40 +1,6 @@
 @import '@theme';
 
-.product-filter {
-  display: inline-block;
-
-  padding: $spacing-16 $spacing-12;
-  margin: $spacing-12;
-
-  background-color: $cl-background;
-  box-shadow: 0 0 0 1px $cl-text inset;
-  cursor: pointer;
-  user-select: none;
-
-  &.selected {
-    box-shadow: 0 0 0 2px $cl-text inset;
-  }
-}
-
-.filters-container {
-  margin: $spacing-24 0;
-
-  display: flex;
-  align-items: center;
-
-  :last-child {
-    margin-right: 0;
-  }
-
-  :first-child {
-    margin-left: 0;
-  }
-}
-
-.products-container {
-  min-height: 100vh;
-}
-
 .container {
-  padding: $spacing-48 0;
+  padding-top: $spacing-20;
+  padding-bottom: $spacing-48;
 }
