--- a/src/components/UI/Separator/Separator.module.scss
+++ b/src/components/UI/Separator/Separator.module.scss
@@ -4,17 +4,15 @@
   width: $spacing-32;
   height: $spacing-32;
 
-  fill: $cl-text-primary;
+  fill: $cl-text;
 
   margin: 0 $spacing-96;
-  // background-color: $cl-primary-light-1;
 }
 
 .separator-box {
   margin: $spacing-96 0;
   width: 100%;
   padding: $spacing-32;
-  // background-color: $cl-primary-light-1;
 }
 
 .separator-box-container {
