--- a/src/components/UI/StepsHero/StepsHero.module.scss
+++ b/src/components/UI/StepsHero/StepsHero.module.scss
@@ -12,7 +12,7 @@
   display: block;
   font-size: $font-size-20;
   font-weight: $fw-600;
-  color: $cl-primary-dark-2;
+  color: $cl-text;
   text-transform: uppercase;
   margin-bottom: $spacing-16;
   letter-spacing: $f-ls-75;
@@ -27,22 +27,6 @@
 
   z-index: 0;
 }
-
-// .step-img-box::before {
-//   content: '';
-//   display: block;
-//   width: 60%;
-//   padding-bottom: 60%;
-//   background-color: $cl-primary-light-4;
-//   position: absolute;
-//   border-radius: 50%;
-
-//   top: 50%;
-//   left: 50%;
-
-//   transform: translate(-50%, -50%);
-//   z-index: -1;
-// }
 
 .step-img {
   width: 35%;
