fix: changing buy button texts

--- a/src/components/product/ProductDetails/ProductDetail.module.scss
+++ b/src/components/product/ProductDetails/ProductDetail.module.scss
@@ -19,6 +19,17 @@
   font-weight: $fw-600;
 }
 
+.ghost-icon {
+  background-color: $cl-text;
+
+  fill: $cl-background;
+
+  width: $spacing-20;
+  height: $spacing-20;
+
+  margin-left: $spacing-12;
+}
+
 .annotations-box {
   margin-bottom: $spacing-8;
 
