--- a/src/components/UI/Button/index.module.scss
+++ b/src/components/UI/Button/index.module.scss
@@ -17,7 +17,7 @@
   cursor: pointer;
 
   box-shadow: inset 0 0 0 3px $cl-text;
-  transition: all 0.3s;
+  transition: all 0.3s ease-in;
 
   &.ouline {
     background-color: transparent;
