--- a/src/components/product/ImageSlider/ImageSlider.module.scss
+++ b/src/components/product/ImageSlider/ImageSlider.module.scss
@@ -39,7 +39,7 @@
   font-size: $font-size-44;
   background-color: transparent;
 
-  color: rgba($color: $cl-background, $alpha: 0.5);
+  color: rgba($color: $cl-text, $alpha: 0.8);
 
   cursor: pointer;
 }
@@ -56,7 +56,7 @@
   font-size: $font-size-44;
   background-color: transparent;
 
-  color: rgba($color: $cl-background, $alpha: 0.5);
+  color: rgba($color: $cl-text, $alpha: 0.8);
 
   cursor: pointer;
 }
@@ -80,9 +80,9 @@
   font-size: $font-size-30;
   cursor: pointer;
 
-  color: rgba($color: $cl-background, $alpha: 0.5);
+  color: rgba($color: $cl-text, $alpha: 0.5);
 
   &.selected {
-    color: rgba($color: $cl-background, $alpha: 0.8);
+    color: rgba($color: $cl-text, $alpha: 1);
   }
 }
