feat: adding small screens responsivity

--- a/src/components/UI/Footer/index.module.scss
+++ b/src/components/UI/Footer/index.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   height: $h-container-footer;
-  padding: $spacing-80 0;
+  padding: $spacing-80 $spacing-32;
 
   background-color: $cl-text;
 
