--- a/src/components/UI/StepsHero/StepsHero.module.scss
+++ b/src/components/UI/StepsHero/StepsHero.module.scss
@@ -1,11 +1,22 @@
 @import '@theme';
 
+.stepshero-grid {
+  display: grid;
+
+  column-gap: $spacing-48;
+  row-gap: $spacing-96;
+
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .steps-hero-section {
-  padding: $spacing-96 0;
+  padding: 0 $spacing-32 $spacing-96 $spacing-32;
 }
 
 .heading-box {
-  padding: $spacing-96 $spacing-24;
+  text-align: center;
+
+  padding: $spacing-128 0;
 }
 
 .subheading {
@@ -45,4 +56,8 @@
   font-size: $font-size-18;
   line-height: $font-lineHeight-4;
   color: $cl-small-text;
+}
+
+.step-text-box {
+  text-align: center;
 }
