feat: finishing small screens responsivity

--- a/src/pages/produtos/index.module.scss
+++ b/src/pages/produtos/index.module.scss
@@ -1,6 +1,5 @@
 @import '@theme';
 
 .container {
-  padding-top: $spacing-20;
-  padding-bottom: $spacing-48;
+  padding: $spacing-48 $spacing-32;
 }
