--- a/src/features/products/components/Filters/index.module.scss
+++ b/src/features/products/components/Filters/index.module.scss
@@ -1,33 +1,9 @@
 @import '@theme';
 
-.filters-container {
-  margin: $spacing-24 0;
-
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-
-  :last-child {
-    margin-right: 0;
-  }
-
-  :first-child {
-    margin-left: 0;
-  }
+.container {
+  padding: $spacing-32 0;
 }
 
-.product-filter {
-  display: inline-block;
-
-  padding: $spacing-16 $spacing-12;
-  margin: $spacing-12;
-
-  background-color: $cl-background;
-  box-shadow: 0 0 0 1px $cl-text inset;
-  cursor: pointer;
-  user-select: none;
-
-  &.selected {
-    box-shadow: 0 0 0 2px $cl-text inset;
-  }
+.filter-text {
+  margin-bottom: $spacing-12;
 }
