--- a/src/components/UI/StepsHero/StepsHero.module.scss
+++ b/src/components/UI/StepsHero/StepsHero.module.scss
@@ -26,7 +26,7 @@
   color: $cl-text;
   text-transform: uppercase;
   margin-bottom: $spacing-16;
-  letter-spacing: $f-ls-75;
+  letter-spacing: 0.75px;
 }
 
 .step-img-box {
