--- a/src/features/products/components/List/index.module.scss
+++ b/src/features/products/components/List/index.module.scss
@@ -3,3 +3,15 @@
 .products-container {
   min-height: $h-container-content + $h-container-footer;
 }
+
+.grid-container {
+  display: grid;
+  column-gap: $spacing-64;
+  row-gap: $spacing-64;
+
+  grid-template-columns: repeat(4, 1fr);
+
+  @include sm-desktop {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
