--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -12,4 +12,8 @@
   row-gap: $spacing-64;
 
   grid-template-columns: repeat(4, 1fr);
+
+  @include sm-desktop {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
