--- a/src/components/UI/Heading/Heading.module.scss
+++ b/src/components/UI/Heading/Heading.module.scss
@@ -4,38 +4,62 @@
   font-weight: $fw-800;
   line-height: $font-lineHeight-2;
   font-family: $font-type-title;
-  letter-spacing: $f-ls-002;
+  letter-spacing: -2px;
   user-select: none;
   background-color: inherit;
 
   &.heading-h1 {
     font-size: $font-size-52;
     line-height: $font-lineHeight-3;
+
+    @include tablets {
+      font-size: $font-size-44;
+    }
   }
 
   &.heading-h2 {
     font-size: $font-size-44;
     line-height: $font-lineHeight-4;
+
+    @include tablets {
+      font-size: $font-size-36;
+    }
   }
 
   &.heading-h3 {
     font-size: $font-size-24;
-    letter-spacing: $f-ls-02;
+    letter-spacing: -0.2px;
+
+    @include tablets {
+      font-size: $font-size-20;
+    }
   }
 
   &.heading-h4 {
     font-size: $font-size-20;
-    letter-spacing: $f-ls-02;
+    letter-spacing: -0.2px;
+
+    @include tablets {
+      font-size: $font-size-18;
+    }
   }
 
   &.heading-h5 {
     font-size: $font-size-18;
-    letter-spacing: $f-ls-02;
+    letter-spacing: -0.2px;
+
+    @include tablets {
+      font-size: $font-size-16;
+    }
   }
 
   &.heading-h6 {
     font-size: $font-size-16;
-    letter-spacing: $f-ls-02;
+    letter-spacing: -0.3px;
+
+    @include tablets {
+      letter-spacing: -0.1px;
+    }
   }
 
   &.inline {
