--- a/src/components/UI/Heading/Heading.module.scss
+++ b/src/components/UI/Heading/Heading.module.scss
@@ -27,6 +27,7 @@
   }
 
   &.heading-h3 {
+    font-weight: $fw-600;
     font-size: $font-size-24;
     letter-spacing: -0.2px;
 
@@ -36,6 +37,7 @@
   }
 
   &.heading-h4 {
+    font-weight: $fw-600;
     font-size: $font-size-20;
     letter-spacing: -0.2px;
 
@@ -45,6 +47,7 @@
   }
 
   &.heading-h5 {
+    font-weight: $fw-400;
     font-size: $font-size-18;
     letter-spacing: -0.2px;
 
@@ -54,6 +57,7 @@
   }
 
   &.heading-h6 {
+    font-weight: $fw-400;
     font-size: $font-size-16;
     letter-spacing: -0.3px;
 
