fix: initial page layout fixes

--- a/src/features/products/components/Details/index.module.scss
+++ b/src/features/products/components/Details/index.module.scss
@@ -43,7 +43,7 @@
 
 .product-important-annotations {
   display: inline;
-  text-decoration: underline;
+  text-decoration: wavy underline;
   font-weight: $fw-500;
   margin-bottom: $spacing-16;
 
