--- a/src/features/products/components/Details/index.module.scss
+++ b/src/features/products/components/Details/index.module.scss
@@ -1,8 +1,24 @@
 @import '@theme';
 
+.container {
+  @include xm-tablets {
+    padding: $spacing-32 0;
+  }
+}
+
 .detail-box {
   width: 100%;
   padding: $spacing-12 0;
+}
+
+.description-box {
+  width: 100%;
+  padding: $spacing-12;
+  padding-left: 0;
+
+  @include sm-tablets {
+    padding-right: $spacing-32;
+  }
 }
 
 .product-color-option-box {
@@ -44,7 +60,7 @@
 .product-important-annotations {
   display: inline;
   text-decoration: wavy underline;
-  font-weight: $fw-500;
+  font-weight: 600 !important;
   margin-bottom: $spacing-16;
 
   &:last-child {
