--- a/src/features/products/components/ImageSlider/index.module.scss
+++ b/src/features/products/components/ImageSlider/index.module.scss
@@ -5,15 +5,24 @@
   height: $spacing-128;
 
   overflow: hidden;
+
+  margin-right: $spacing-24;
+}
+
+.tablet-classes {
+  @include xm-tablets {
+    object-fit: contain !important;
+  }
 }
 
 .preshow-images-box {
+  display: flex;
+
   cursor: pointer;
 
   margin: $spacing-24 0;
 
   max-width: 550px;
-  gap: $spacing-12;
 }
 
 .main-image-box {
@@ -25,6 +34,25 @@
   position: relative;
 
   transition: all 0.5s ease-in;
+
+  @include tablets {
+    height: 480px;
+    max-width: 480px;
+  }
+
+  @include sm-tablets {
+    height: 410px;
+    max-width: 410px;
+  }
+
+  @include xm-tablets {
+    width: 100%;
+    max-width: 100%;
+
+    height: 600px;
+
+    border: 1px solid $cl-text;
+  }
 }
 
 .left-arrow {
@@ -66,7 +94,7 @@
   background-color: transparent;
   top: 90%;
 
-  width: 550px;
+  width: 100%;
   margin: $spacing-12 0;
 
   display: flex;
