--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,7 +5,8 @@
 }
 
 .products {
-  padding: 0 $spacing-32;
+  padding: 0 $spacing-32 $spacing-32 $spacing-32;
+  margin: $spacing-24 0;
 
   display: grid;
   column-gap: $spacing-32;
