--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -71,15 +71,18 @@ $h-container-content: 52vh;
 $h-container-footer: 40vh;
 
 /** 
-  * Mixins
-  * 
-  * rem and em do NOT depend on html font-size in media queries!
-  *
-  * instead, 1rem = 1em = 16px
-  *
-  * @mixin mobiles
-  * @mixin tablets (1200 / 16px) = 75rem
-  * @mixin desktops (1350px / 16px) = 84em
+  Mixins
+  
+  rem and em do NOT depend on html font-size in media queries!
+
+  instead, 1rem = 1em = 16px
+
+  
+  
+  @mixin desktops (1350px / 16px) = 84em
+  @mixin tablets (1200 / 16px) = 75em
+  @mixin sm-tablets (930 / 59px) = 59em
+  @mixin xm-tablets (750  / 16px) = 47em
 */
 
 @mixin sm-desktop {
@@ -90,6 +93,18 @@ $h-container-footer: 40vh;
 
 @mixin tablets {
   @media only screen and (max-width: 75em) {
+    @content;
+  }
+}
+
+@mixin sm-tablets {
+  @media only screen and (max-width: 59em) {
+    @content;
+  }
+}
+
+@mixin xm-tablets {
+  @media only screen and (max-width: 47em) {
     @content;
   }
 }
