--- a/src/features/products/components/Card/index.module.scss
+++ b/src/features/products/components/Card/index.module.scss
@@ -22,6 +22,10 @@
 
 .product-title {
   font-weight: $fw-600 !important;
+
+  @include xm-tablets {
+    font-size: $font-size-18 !important;
+  }
 }
 
 .card-box {
@@ -95,4 +99,9 @@
   height: 0;
 
   transition: 0.3s ease-in-out;
+
+  @include xm-tablets {
+    width: $spacing-20;
+    height: $spacing-20;
+  }
 }
