--- a/src/features/products/components/List/index.module.scss
+++ b/src/features/products/components/List/index.module.scss
@@ -16,4 +16,10 @@
 
     row-gap: $spacing-32;
   }
+
+  @include xm-tablets {
+    grid-template-columns: repeat(2, 1fr);
+
+    row-gap: $spacing-24;
+  }
 }
