fix: footer logo adjust

--- a/src/components/UI/Footer/index.module.scss
+++ b/src/components/UI/Footer/index.module.scss
@@ -33,6 +33,14 @@
   fill: $cl-background;
 
   max-width: $screen-sm;
+
+  @include tablets {
+    max-width: $screen-xm;
+  }
+
+  @include xm-tablets {
+    max-width: 24rem;
+  }
 }
 
 .footer-link:link,
