--- a/src/components/UI/CartSidebar/ProductsList/ProductsList.module.scss
+++ b/src/components/UI/CartSidebar/ProductsList/ProductsList.module.scss
@@ -3,7 +3,7 @@
 .container {
   flex: 7;
 
-  padding: $spacing-48 $spacing-16;
+  padding: 0 $spacing-16 $spacing-48 $spacing-16;
 }
 
 .list-container {
