--- a/src/components/UI/NavbarMenu/index.module.scss
+++ b/src/components/UI/NavbarMenu/index.module.scss
@@ -6,7 +6,7 @@
 
 .sidebar-container {
   height: 100vh;
-  width: 500px;
+  width: 100vw;
 
   position: fixed;
   right: 0px;
@@ -46,23 +46,11 @@
   transition: all 0.2s linear;
 }
 
-.withdata-container {
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.header-container {
+.top-close-container {
   height: $h-container-navbar;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-}
-
-.content-container {
-  width: 100%;
-  height: 100%;
 }
 
 .close-button {
@@ -74,4 +62,44 @@
   background-color: transparent;
 
   cursor: pointer;
+}
+
+.nav-container {
+  width: 100%;
+}
+
+.nav-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  list-style: none;
+}
+
+.nav-item {
+  width: 100%;
+
+  padding: $spacing-24;
+
+  display: flex;
+  justify-content: center;
+
+  border-top: 1px solid $cl-text;
+
+  &:last-child {
+    border-bottom: 1px solid $cl-text;
+  }
+}
+
+.nav-link,
+.nav-link:visited,
+.nav-link:link {
+  text-decoration: none;
+  font-size: $font-size-24;
+  font-weight: $fw-800;
+  color: $cl-text;
+
+  &:hover {
+    color: $cl-medium-text;
+  }
 }
