--- a/src/features/products/components/List/index.module.scss
+++ b/src/features/products/components/List/index.module.scss
@@ -22,4 +22,10 @@
 
     row-gap: $spacing-24;
   }
+
+  @include mobiles {
+    grid-template-columns: repeat(1, 1fr);
+
+    row-gap: $spacing-20;
+  }
 }
