feat: finish about layout

--- a/src/components/UI/Container/Container.module.scss
+++ b/src/components/UI/Container/Container.module.scss
@@ -7,4 +7,20 @@
   margin: 0 auto;
 
   max-width: $screen-xl;
+
+  @include tablets {
+    max-width: $screen-lg;
+  }
+
+  @include sm-tablets {
+    max-width: 90rem;
+  }
+
+  @include xm-tablets {
+    max-width: $screen-md;
+  }
+
+  @include mobiles {
+    max-width: 60rem;
+  }
 }
