--- a/src/features/products/components/List/index.module.scss
+++ b/src/features/products/components/List/index.module.scss
@@ -11,7 +11,7 @@
 
   grid-template-columns: repeat(4, 1fr);
 
-  @include sm-desktop {
+  @include tablets {
     grid-template-columns: repeat(3, 1fr);
 
     row-gap: $spacing-32;
