--- a/src/components/UI/ImageBox/ImageBox.module.scss
+++ b/src/components/UI/ImageBox/ImageBox.module.scss
@@ -4,16 +4,12 @@
   width: 100%;
   height: 100%;
 
-  & span {
-    position: unset !important;
-    width: 100% !important;
-    height: 100% !important;
-  }
+  position: relative;
 }
 
-.image {
-  object-fit: contain;
-  width: 100% !important;
-  position: relative !important;
-  height: unset !important;
-}
+// .image {
+//   object-fit: contain;
+//   width: 100%;
+//   position: relative !important;
+//   height: unset !important;
+// }
